--- a/index.html
+++ b/index.html
@@ -100,18 +100,18 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img srcset="firefox_logo-only_RGB.png 1200w,
-                       firefox_logo-only_RGB120.png 120w,
-                       firefox_logo-only_RGB400.png 400w"
+          <img srcset="images/firefox_logo-only_RGB.png 1200w,
+                       images/firefox_logo-only_RGB120.png 120w,
+                       images/firefox_logo-only_RGB400.png 400w"
                 sizes="(max-width: 480px) 120w,
                        (min-width: 480px) 400w,1200w"
 
                 src=firefox_logo-only_RGB.png"" alt="Moszilla logo">
         </a>
         <a href="https://www.mozilla.org/">
-          <img srcset="dinosaur.png 1200w,
-                       dinosaur120.png 120w,
-                       dinosaur400.png 400w"
+          <img srcset="images/dinosaur.png 1200w,
+                       images/dinosaur120.png 120w,
+                       images/dinosaur400.png 400w"
                 sizes="(max-width: 480px) 120w,
                        (min-width: 480px) 400w,1200w"
 
@@ -119,8 +119,8 @@
                src="mozzila-dinosaur-head.png" alt="Mozzila Dinosaur Head">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img srcset="addons.jpg 400w,
-                       addons120.jpg 120w"
+          <img srcset="images/addons.jpg 400w,
+                       images/addons120.jpg 120w"
                sizes="(max-width: 480px) 120w,
                       (min-width: 480px) 400w>
         </a>
