correcting src line

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 sizes="(max-width: 480px) 120w,
                        (min-width: 480px) 400w,1200w"
 
-                src=firefox_logo-only_RGB.png"" alt="Moszilla logo">
+                src="firefox_logo-only_RGB.png"" alt="Moszilla logo">
         </a>
         <a href="https://www.mozilla.org/">
           <img srcset="images/dinosaur.png 1200w,
