--- a/index.html
+++ b/index.html
@@ -5,135 +5,57 @@
     <meta name="viewport" content="width=device-width">
     <title>Mozilla splash page</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <style>
-      /* header and body setup */
-      html {
-        font-family: 'Open Sans', sans-serif;
-        background: url(pattern.png);
-      }
-      body {
-        width: 100%;
-        max-width: 1200px;
-        min-width: 360px;
-        margin: 0 auto;
-        background-color: white;
-        position: relative;
-      }
-      /* Header styling */
-      header {
-        height: 150px;
-      }
-      header img {
-        width: 100px;
-        position: absolute;
-        right: 32.5px;
-        top: 32.5px;
-      }
-      h1 {
-        font-size: 50px;
-        line-height: 140px;
-        margin: 0 0 0 32.5px;
-      }
-      /* main section and video styling */
-      main {
-        background: #ccc;
-      }
-      article {
-        padding: 20px;
-      }
-      h2 {
-        margin-top: 0;
-      }
-      p {
-        line-height: 2;
-      }
-      iframe {
-        float: left;
-        margin: 0 20px 20px 0;
-        max-width: 100%;
-      }
-      /* further info links */
-      .further-info {
-        clear: left;
-        padding: 40px 0;
-        background: #c13832;
-        box-shadow: inset 0 3px 2px rgba(0,0,0,0.5),
-                    inset 0 -3px 2px rgba(0,0,0,0.5);
-      }
-      .further-info a {
-        width: 25%;
-        display: block;
-        float: left;
-      }
-      .further-info img {
-        max-width: 100%;
-      }
-      .clearfix {
-        clear: both;
-      }
-      /* Red panda image */
-      .red-panda img {
-        display: block;
-        max-width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <header>
       <h1>Mozilla</h1>
-      <img src="firefox_logo-only_RGB120.png">
-
+      <img src="images/firefox_logo-only_RGB120.png">
     </header>
-
     <main>
       <article>
-        <iframe src="https://www.youtube.com/watch?v=ojcNcvb1olg" width="400px" height="200">
-        </iframe>
-
+        <iframe width="400" height="315" src="https://www.youtube.com/embed/ojcNcvb1olg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <h2>Rocking the free web</h2>
-
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
-
         <p>Click on the images below to find more information about the cool stuff Mozilla does. <a href="https://www.flickr.com/photos/mathiasappel/21675551065/">Red panda picture</a> by Mathias Appel.</p>
       </article>
-
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
           <img srcset="images/firefox_logo-only_RGB.png 1200w,
-                       images/firefox_logo-only_RGB120.png 120w,
                        images/firefox_logo-only_RGB400.png 400w"
                 sizes="(max-width: 480px) 120w,
-                       (min-width: 480px) 400w,1200w"
-
-                src="firefox_logo-only_RGB.png"" alt="Moszilla logo">
+                       (min-width: 480px) 400w"
+                src="firefox_logo-only_RGB.png"alt="Moszilla logo">
         </a>
         <a href="https://www.mozilla.org/">
-          <img srcset="images/dinosaur.png 1200w,
-                       images/dinosaur120.png 120w,
+          <img srcset="images/dinosaur120.png 120w,
                        images/dinosaur400.png 400w"
-                sizes="(max-width: 480px) 120w,
-                       (min-width: 480px) 400w,1200w"
-
-
+                sizes="(max-width:480px) 120w,
+                       (min-width: 481px) 400w"
                src="mozzila-dinosaur-head.png" alt="Mozzila Dinosaur Head">
         </a>
         <a href="https://addons.mozilla.org/">
           <img srcset="images/addons.jpg 400w,
                        images/addons120.jpg 120w"
-               sizes="(max-width: 480px) 120w,
-                      (min-width: 480px) 400w>
+               sizes="(max-width: 400px) 120w,
+                      (min-width: 480px) 400w">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img
+            src="images/mdn.svg"
+            alt="triangle with all three sides equal"
+            height="190.8px"
+            width="254.4px" />
         </a>
         <div class="clearfix"></div>
       </div>
-
       <div class="red-panda">
-        <!-- insert picture element -->
+        <picture>
+          <source media="(max-width : 600px)" srcset="images/red-panda-small.jpg">
+          <img src="images/red-panda.jpg" alt="">
+        </picture>
       </div>
-
     </main>
   </body>
 </html>
